# watermarker

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  README.md  README_EN.md  TUTORIAL.md  WORKFLOW.md  testRes_2026_6_5.txt
docs/log/: testRes_2026_6_09.txt  testRes_2026_6_10.txt
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: batch.rs  exif.rs  image.rs  mod.rs  watermark.rs
src-tauri/src/engine/: exif.rs  image.rs  mod.rs  overlay.rs  text.rs
src-tauri/tests/: bench_batch.rs
src/components/: BatchPanel.vue  CenterCanvas.vue  LeftPanel.vue  RightPanel.vue
src/components/export/: ExportSection.vue
src/components/watermark/: ExifFieldStylePanel.vue  ExifWatermarkPanel.vue  LogoWatermarkPanel.vue  TextWatermarkPanel.vue
src/composables/: useCanvas.ts  useFontLoader.ts  useTauriCommands.ts  useWatermarkDrawing.ts
src/stores/: batch.ts  image.ts  watermark.ts
src/styles/: shared.css
src/types/: index.ts
src/utils/: colorConvert.ts  tradeMarks.ts
