[package]
name = "watermarker"
version = "0.3.0"
description = "A lightweight image watermark editor"
authors = ["watermarker"]
edition = "2021"

[lib]
name = "watermarker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
kamadak-exif = "0.6"
base64 = "0.22"
imageproc = "0.25"
ab_glyph = "0.2"
